hphp/test/zend/good/ext/odbc/tests/config.skipif
<?hh

include 'config.inc';

if (extension_loaded("odbc")) {
  $link = odbc_connect($dsn, $user, $pass)
      || die("Couldn't connect, must skip.");
}
else {
  echo "skip";
}
