hphp/test/zend/bad/ext/pgsql/tests/13pg_select.php.skipif
<?php
include("skipif.inc");
skip_server_version('8.5dev', '>=');
?>